footer design on mobile fix

--- a/app/assets/stylesheets/layout/footer/footer.scss
+++ b/app/assets/stylesheets/layout/footer/footer.scss
@@ -51,7 +51,6 @@ section#application-footer {
 
   @media only screen and (max-width: $mobile-width) {
     .section-container {
-      height: 120px;
       padding: 0 $mobile-padding !important;
 
       div.social-medias {
